Can now compile and upload to Screeps main instance
I can now compile c code to wasm using emscriptem and then using grunt and various other related dependencies I can clean up and upload the code directly to the "upload" branch directly on server.  I should see about a "makefile" of sorts to see if I can automate the process, especially if I am going to be using multiple files.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ sketch
 
 package-lock.json
 **/.eslintcache
+
+# screeps specific
+# .screeps.json contain things that would be a security issue for the game account,
+# .wasm needs to be compiled each time anyway
+/.screeps.json
+.wasm
