--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
+  "name": "ScreepsScripts",
+  "version": "0.0.0",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "devDependencies": {
-    "grunt": "^1.3.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-screeps": "^1.5.0"
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-file-append": "^0.0.7",
+    "grunt-jsbeautifier": "^0.2.13",
+    "grunt-rsync": "^3.0.0",
+    "time-grunt": "^2.0.0"
   },
   "dependencies": {
-    "grunt-init": "^0.3.2"
+    "grunt-screeps": "^1.5.0"
   }
 }
